Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá, mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam aut dicta ipsum harum nam quasi deserunt, natus minus aliquam, quisquam iste dolorem a voluptatibus impedit. Obcaecati ad suscipit veritatis culpa.</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti accusantium aliquam veritatis maiores quidem velit beatae sunt. Labore est culpa fugiat, nulla laboriosam, repellat vel ratione voluptatum exercitationem dolorem provident!</p>
 </body>
 </html>
